syntax = "proto3";

package login;
option go_package = "./pb/login";

service Login {
  // 定義 API Interface，Greet 為此 API 的 Name，
  // 代表 給 Greet API Request 當參數，並返回 Response
  rpc Register(RegisterReq) returns (RegisterRsp) {}
  rpc Login(LoginReq) returns (LoginRsp) {}
}

// Request 需要攜帶 type 為 string 的參數 name
message RegisterReq {
  string name=1;
  string passwd=2;
}
message RegisterRsp {
  string result=1;
}

message LoginReq {
  string name = 1; // 數字不重複即可
  string passwd = 2;
}

// Response 會返回 type 為 string 的參數 greeting
message LoginRsp {
  string result = 1; // 數字不重複即可
}